--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       EULA: "TRUE"
       MEMORY: "6G"
       TYPE: "SPIGOT"
+      VERSION: "1.16"
     restart: always
     logging:
       driver: loki
